--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sakai-ng",
+  "name": "eea-frontend",
   "version": "19.0.1",
   "scripts": {
     "ng": "ng",
@@ -22,6 +22,7 @@
     "@angular/router": "^19.2.2",
     "@primeng/themes": "^19.0.5",
     "chart.js": "4.4.2",
+    "ng-recaptcha": "^13.2.1",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.8",
