--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,13 @@
                                     "with": "src/environments/environment.prod.ts"
                                 }
                             ],
+                            "optimization": {
+                                "scripts": true,
+                                "styles": {
+                                    "minify": true,
+                                    "inlineCritical": true
+                                }
+                            },
                             "outputHashing": "all"
                         },
                         "qa": {
