--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.2.2",
     "@primeng/themes": "^19.0.5",
     "chart.js": "4.4.2",
+    "date-fns": "^4.1.0",
     "ng-recaptcha": "^13.2.1",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
